fix(input-field): ensure label is vertically center aligned, in dialog
The label of `limel-input-field` (as well as `limel-select`, `limel-chip-set`
& other similar form components) would inherit a `line-height`
when the component was used in `limel-dialog`

--- a/src/components/notched-outline/notched-outline.scss
+++ b/src/components/notched-outline/notched-outline.scss
@@ -113,6 +113,7 @@ limel-notched-outline {
                 --mdc-typography-subtitle1-letter-spacing,
                 0.009375em
             );
+            line-height: normal;
 
             &:after {
                 position: absolute;
